# edge-node-runtime

./: README.md  pyproject.toml
config/: edge-runtime.example.yaml
docs/: repo_struc.txt  roadmap.md
edge-observability/: docker-compose.yml  prometheus.yml
packaging/systemd/: edge-runtime.service
scripts/: dummy_workload.py  health_demo.py
src/edge_node_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/edge_runtime/: api.py  config.py  main.py  metrics.py  supervisor.py
src/edge_runtime/util/: logging.py
