[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-node-runtime"
version = "0.1.0"
description = "Lightweight edge runtime that supervises workloads and exposes Prometheus metrics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.0",
  "prometheus-client>=0.20.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
]

[project.scripts]
edge-runtime = "edge_runtime.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
